lab1/Test/L1-A-13-2.output
Error Type A at Line 8
Error Type B at Line 18
Error Type A at Line 32
Error Type B at Line 66
Error Type B at Line 66
Error Type B at Line 67
Error Type B at Line 70
