lab1/Test/L1-A-13-2.cmm
float ;
int Ajv0QoFh51RbQk3o ( struct d4LFcyfzuESDX_QlF a5ktS 
  ) {
  int S5XmZf5FeLN9OJd9E2t ;
  int AUaJ ;
  int YucQUIzK_V4qGg6MgQXt ;
  int Vp0FlwU ;
  int P1_ `;
  int qa_aw7RqYns ;
  struct oUJiRm9tdxlvq YNIprdG7CH ;
  int fDlKXNrvBErh ;
  struct {
    int ubq3Wjp0pDt9TKJYLse , Ujw3D = _qyRdKhb7cZHO 
      ;
  }IrupXebP6Hh0Gsg5KZk ;
  if ( D0NUOKVWpW2jHXwim )   qVs3TnlVEVLEaLa_pChS 
    ;
else   return RB = || LXpKdk8L && mI1eCTXPX7T < syqJdt39CHi4 
    + KUnLFPKE [ PsWE99VlQZkDKlGggcN = t50CTqrmRebXYbfG5H 
    - vkVlMatxRzEX9O7 / - ! NfR ( hkP0gIG292Lo9Of9fLI 
    == ! ( e1zxhrORtTBLsMJ && rF1GAP421oHiKOz <= NVX3nehLogDLVEehMxnJ 
    * ( rZCFMAr4oqCvWSvE8Q > LieoP41v1Q3tAVA_MC ( Jumfry85 
    , ndt2zdOKE || oAwHXT3p94U6MiknnUB >= yGCtuxvRZ ) 
    ) != 695051369 / VRC ) * 1328417371.1293228413 * jk255STGFHe 
    ( ) ) . R8GFHOSSEV ] ;

}
struct p mQhJeC91dOtp [ 1391551427 ] , CdRCQk9 

;
int gKrH4oUVtpFlBxB_LQ ( ) {
\}
struct lybnw2Dhoh_ ;
int Pt8Of0ebJ1 ( ) {
{
    if ( PmFec1sDNXo )     if ( bl0vSw_S16f )     WgF82RcI3WZ1D 
      ;
else {
      Ui8zW1 ;
      if ( b51ATqwoc )       ZVa63 ;
else {
        struct cK {
          int sp_Dcobl8o07oxe ;
        }dCHKyYVCTK5R9LyhC2Z ;
        struct ShX6 dyVT1XoWh ;
        oyQIZzN5 ;
      }
      gp5pZqd2 ;
      while ( OK4CUbMU8pDFBhVX1j )       ZabHgVv5pBYl 
        ;

    }

    if ( BwIB ) {
      int gAzdFApP ;
      L9GwKtMvxasSiivXCMQ ;
    }else     if ( S8BVu1azK_ )     while ( grhcNfljzDe 
      )     POquiTMpy5gh ;



    if ( QoBEZrotz6dC_ )     fmQKZ__ShAaGxnakmg ;
else     DetkViHBwFMhgZFa5lsf ;

  }  pg ;
==   if ( && smkzL_r5dt8wF )   if ( CixwtzaY )   while 
     ( lq8mfBdny05wJwB )   Onr8euji7vINq0B1b7W ;

else   if ( o8iw )   if ( M )   if ( bAW4HvIyi33hvCLEW 
      while ( E ) {
  }





}
int ;
int sPtTqEdmWehfRJsZI ( ) {
}
int U7cZAwj ( int HN2_xty7G , int x ) {
}
int PXZst ( ) {
}
int ;
int ;
